# Zephyr_Docker

./: README.md
tools/: Dockerfile.espressif  build_esp32.sh  requirements.txt  start_docker.sh  template_build_esp32.sh
workspace/cpp_hello/: CMakeLists.txt  prj.conf
workspace/cpp_hello_synch/: CMakeLists.txt  prj.conf
workspace/hello_blink/: CMakeLists.txt
workspace/hello_blink/boards/: esp32_devkitc_wroom.overlay
workspace/hello_blink/src/: main.c
workspace/hello_blink_lib/: CMakeLists.txt
workspace/hello_blink_lib/HelloLib/: CMakeLists.txt  HelloLib.c  HelloLib.h  hello_support.c  hello_support.h
workspace/hello_blink_lib/src/: main.c
